BusOne/src/objects/Speaker_Evaluation__c.object
<CustomObject>
    <description>Speaker Evaluations data for professionals</description>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Link to the Account</description>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Speaker Evaluations</relationshipLabel>
        <relationshipName>Speaker_Event</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Comments__c</fullName>
        <description>Overall Comments for the evaluation</description>
        <label>Comments</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Credibility__c</fullName>
        <description>Picklist of credibility ratings</description>
        <inlineHelpText>How credible was this speaker on the topic?</inlineHelpText>
        <label>Credibility</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Excellent</fullName>
                </value>
                <value>
                    <fullName>Very Good</fullName>
                </value>
                <value>
                    <fullName>Good</fullName>
                </value>
                <value>
                    <fullName>Fair</fullName>
                </value>
                <value>
                    <fullName>Poor</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Date__c</fullName>
        <description>Date of the evaluation</description>
        <label>Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Overall_Rating__c</fullName>
        <description>Picklist of overall ratings</description>
        <inlineHelpText>Please provide the overall rating of this speaker&apos;s performance</inlineHelpText>
        <label>Overall Rating</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Excellent</fullName>
                </value>
                <value>
                    <fullName>Very Good</fullName>
                </value>
                <value>
                    <fullName>Good</fullName>
                </value>
                <value>
                    <fullName>Fair</fullName>
                </value>
                <value>
                    <fullName>Poor</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Preparedness__c</fullName>
        <description>Picklist of preparedness ratings</description>
        <inlineHelpText>How prepared was this speaker?</inlineHelpText>
        <label>Preparedness</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Excellent</fullName>
                </value>
                <value>
                    <fullName>Very Good</fullName>
                </value>
                <value>
                    <fullName>Good</fullName>
                </value>
                <value>
                    <fullName>Fair</fullName>
                </value>
                <value>
                    <fullName>Poor</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Presentation_Skills__c</fullName>
        <description>Picklist of presentation skills ratings</description>
        <inlineHelpText>How good were this speaker&apos;s presentation skills?</inlineHelpText>
        <label>Presentation Skills</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Excellent</fullName>
                </value>
                <value>
                    <fullName>Very Good</fullName>
                </value>
                <value>
                    <fullName>Good</fullName>
                </value>
                <value>
                    <fullName>Fair</fullName>
                </value>
                <value>
                    <fullName>Poor</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Professionalism__c</fullName>
        <description>Picklist of professionalism ratings</description>
        <inlineHelpText>How professional was this speaker before, during and after the engagement?</inlineHelpText>
        <label>Professionalism</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Excellent</fullName>
                </value>
                <value>
                    <fullName>Very Good</fullName>
                </value>
                <value>
                    <fullName>Good</fullName>
                </value>
                <value>
                    <fullName>Fair</fullName>
                </value>
                <value>
                    <fullName>Poor</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Responsive_to_Audience__c</fullName>
        <description>Picklist of responsiveness to the audience ratings</description>
        <inlineHelpText>How responsive was this speaker to the audience?</inlineHelpText>
        <label>Responsive to Audience</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Excellent</fullName>
                </value>
                <value>
                    <fullName>Very Good</fullName>
                </value>
                <value>
                    <fullName>Good</fullName>
                </value>
                <value>
                    <fullName>Fair</fullName>
                </value>
                <value>
                    <fullName>Poor</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Subject_Knowledge__c</fullName>
        <description>Picklist of knowledge of the subject ratings</description>
        <inlineHelpText>How well did the speaker know the subject material?</inlineHelpText>
        <label>Subject Knowledge</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Excellent</fullName>
                </value>
                <value>
                    <fullName>Very Good</fullName>
                </value>
                <value>
                    <fullName>Good</fullName>
                </value>
                <value>
                    <fullName>Fair</fullName>
                </value>
                <value>
                    <fullName>Poor</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Subject__c</fullName>
        <description>The subject the speaker discussed</description>
        <label>Subject</label>
        <type>TextArea</type>
    </fields>
    <label>Speaker Evaluation</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Account__c</columns>
        <columns>Date__c</columns>
        <columns>Subject__c</columns>
        <columns>Overall_Rating__c</columns>
        <columns>Comments__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <displayFormat>SE-{00000}</displayFormat>
        <label>Speaker Evaluation ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Speaker Evaluations</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>